--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ Django>=1.5.2
 setuptools>=1.1
 pip>=1.4.1
 pil>=1.1.7
+dj-database-url==0.2.1
+dj-static==0.0.5
 
 South>=0.7.5
 Markdown>=2.1
@@ -26,7 +28,7 @@ pybbm>=0.14.2
 django-inline-media>=1.2b2
 django-pagination>=1.0.7
 #django-tagging==0.4.dev1
-#svn+http://django-tagging.googlecode.com/svn/trunk/
+-e svn+http://django-tagging.googlecode.com/svn/trunk#egg=django-tagging
 django-taggit==0.10a1
 django-taggit-autosuggest>=0.2
 django-taggit-templatetags>=0.4.6dev
