--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Django==1.5.2
 setuptools>=1.1
 pip>=1.4.1
-pil>=1.1.7
+pillow>=2.1.0
 dj-database-url==0.2.1
 dj-static==0.0.5
 gunicorn
@@ -15,7 +15,7 @@ django-pure-pagination>=0.2.1
 sorl-thumbnail>=11.12
 pytils>=0.2.3
 
-django-simple-captcha
+django-simple-math-captcha
 django-forms-bootstrap>=2.0.3
 pinax-theme-bootstrap>=3.0a11
 pinax-theme-bootstrap-account>=1.0b2
