--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ django-user-accounts>=1.0b14
 pybbm>=0.14.2
 
 django-pagination>=1.0.7
-django-taggit==0.10a1
+django-taggit>=0.10a1
 django-taggit-autosuggest>=0.2
 django-taggit-templatetags>=0.4.6dev
 django-templatetag-sugar>=0.1
